--- a/index.html
+++ b/index.html
@@ -3,7 +3,55 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="style.css" />
     <title>Personal Website</title>
   </head>
-  <body></body>
+  <body>
+    <section class="header-bg">
+      <div class="half-width">
+        <div class="text">
+          <h1>
+            Hello I'm <br />
+            <span class="pink-clr">Jack Smith</span>
+          </h1>
+          <p>
+            You might saw me jumping, climbing building and stopping trains but
+            nobody pays me a dime for that work
+          </p>
+          <button class="pink-btn">Hire Me</button>
+        </div>
+      </div>
+      <div class="half-width">
+        <img src="images/peter.png" width="80%" height="80%" alt="" />
+      </div>
+    </section>
+    <section class="dream-bg">
+      <div class="half-width">
+        <img
+          src="images/peter_dream.png"
+          style="margin: 20%;"
+          width="70%"
+          height="70%"
+          alt=""
+        />
+      </div>
+      <div class="half-width">
+        <div class="text">
+          <h1>Biography<br /></h1>
+          <p>
+            You might saw me jumping, climbing building and stopping trains but
+            nobody pays me a dime for that work. You might saw me jumping,
+            climbing building and stopping trains but nobody pays me a dime for
+            that work
+          </p>
+          <button class="pink-btn">Download Cv</button>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
