--- a/index.html
+++ b/index.html
@@ -3,55 +3,75 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Personal website</title>
     <link
       href="https://fonts.googleapis.com/css?family=Poppins&display=swap"
       rel="stylesheet"
     />
-
     <link rel="stylesheet" href="style.css" />
-    <title>Personal Website</title>
   </head>
   <body>
     <section class="header-bg">
       <div class="half-width">
-        <div class="text">
+        <div class="header-area-text">
           <h1>
-            Hello I'm <br />
-            <span class="pink-clr">Jack Smith</span>
+            Hello I'm <br /><span class="text-highlight">Jack Smith</span>
           </h1>
-          <p>
-            You might saw me jumping, climbing building and stopping trains but
-            nobody pays me a dime for that work
+          <p style="margin-bottom: 40px;">
+            You might saw me jumping, climbing buildings, and stopping trains.
+            But nobody pays me a dime for that work.
           </p>
-          <button class="pink-btn">Hire Me</button>
+          <a class="link-button" target="_blank" href="#">HIRE ME</a>
         </div>
       </div>
       <div class="half-width">
-        <img src="images/peter.png" width="80%" height="80%" alt="" />
+        <img style="margin-top: 100px;" src="images/peter.png" alt="" />
       </div>
     </section>
-    <section class="dream-bg">
+    <section class="dream-area">
       <div class="half-width">
-        <img
-          src="images/peter_dream.png"
-          style="margin: 20%;"
-          width="70%"
-          height="70%"
-          alt=""
-        />
+        <img src="images/peter_dream.png" alt="" />
       </div>
       <div class="half-width">
-        <div class="text">
-          <h1>Biography<br /></h1>
-          <p>
-            You might saw me jumping, climbing building and stopping trains but
-            nobody pays me a dime for that work. You might saw me jumping,
-            climbing building and stopping trains but nobody pays me a dime for
-            that work
-          </p>
-          <button class="pink-btn">Download Cv</button>
+        <h2 style="margin-top: 150px;">Biography</h2>
+        <p style="margin-bottom: 40px;">
+          I already learned the basic HTML and CSS. I can build any simple
+          website. I can even teach my grandma how to make simple website. My
+          goal is to build 3 websites and learn advanced topics.
+        </p>
+        <a class="link-button" target="_blank" href="#">DOWNLOAD CV</a>
+      </div>
+    </section>
+    <section style="margin-top: 100px;" class="latest-work-area">
+      <h2>My Latest Work</h2>
+      <div class="column-3" style="margin-left: 4%;">
+        <img src="images/latest-work/work-1.png" alt="" />
+      </div>
+      <div class="column-3">
+        <img src="images/latest-work/work-2.jpg" alt="" />
+      </div>
+      <div class="column-3" style="margin-right: 0;">
+        <img src="images/latest-work/work-3.jpg" alt="" />
+      </div>
+    </section>
+    <section class="footer-bg">
+      <div class="footer-area-text">
+        <h2>What Client Are Say</h2>
+        <h4>Bruce Moccy</h4>
+        <p style="font-size: 12px; margin-top: -5px;">Founder & CEO Alies</p>
+        <p>
+          "Lorem ipsum is simply a dummy text of the <br />
+          printing and typesetting industry.Lorem ipsum"
+        </p>
+        <div class="highlighted-footer-area">
+          <p style="font-size: 10px;">leave me a message in the</p>
+          <p>programming.hero1@gmail.com</p>
         </div>
       </div>
     </section>
+    <footer>
+      <p>&copy;Sabbir Ahmed 2020, all rights reserved.</p>
+    </footer>
   </body>
 </html>
